--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
       - spark-master
       - spark-worker-1
       - spark-worker-2
+    env_file: .env
     volumes:
       - ./:/opt/spark/work-dir
       - ./.sh:/scripts
