--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ SPARK_MASTER_WEBUI_PORT=8080
 SPARK_WORKER_CORES=1
 SPARK_WORKER_MEMORY=1g
 
+SPARK_EXTERNAL_WEBUI_PORT=8080
+SPARK_EXTERNAL_PORT=7077
+
 SPARK_RPC_MESSAGE_MAX_SIZE=1024
 SPARK_NETWORK_MAX_FRAME_SIZE=1024
 SPARK_RPC_IO_THREADS=4
