--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: apache/spark-py:v3.4.0
     container_name: spark-master
     ports:
-      - "8080:8080"
-      - "7077:7077"
+      - "${SPARK_EXTERNAL_WEBUI_PORT}:8080"
+      - "${SPARK_EXTERNAL_PORT}:7077"
     env_file: .env
     environment:
       - SPARK_MODE=master
