feat: add jupyterlab support

--- a/.env
+++ b/.env
@@ -11,4 +11,9 @@ SPARK_EXTERNAL_PORT=7077
 SPARK_RPC_MESSAGE_MAX_SIZE=1024
 SPARK_NETWORK_MAX_FRAME_SIZE=1024
 SPARK_RPC_IO_THREADS=4
-SPARK_NETWORK_TIMEOUT=120s 
+SPARK_NETWORK_TIMEOUT=120s
+
+NEO4J_URI=bolt://neo4j:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=ваш_пароль
+NEO4J_DATABASE=neo4j
