--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ readme = "README.md"
 python = "^3.10"
 pre-commit = "^4.0.1"
 pyspark = "^3.4.0"
+jupyterlab = "^4.3.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
